source/MRMeshC/MRMeshC.h

#       define MRMESHC_API __declspec( dllexport )
#       define MRMESHC_API __declspec( dllimport )
#   define MRMESHC_API __attribute__( ( visibility( "default" ) ) )
typedef MRBitSet MRFaceBitSet;
typedef MRBitSet MRVertBitSet;
typedef struct MRMeshTopology MRMeshTopology;
typedef struct MRMesh MRMesh;
typedef struct MRTriangulation MRTriangulation;
typedef struct MREdgePath MREdgePath;
/// three-dimensional vector
typedef struct MRVector3f
{
    float x;
    float y;
    float z;
} MRVector3f;
/// edge index
typedef struct MREdgeId { int id; } MREdgeId;
/// face index
typedef struct MRFaceId { int id; } MRFaceId;
/// vertex index
typedef struct MRVertId { int id; } MRVertId;
/// a set of 3 vertices; useful for representing a face via its vertex indices
typedef MRVertId MRThreeVertIds[3];
/// constructs a mesh from vertex coordinates and a set of triangles with given ids
MRMESHC_API MRMesh* mrMeshFromTriangles( const MRVector3f* vertexCoordinates, size_t vertexCoordinatesNum, const MRThreeVertIds* t, size_t tNum );
/// constructs a mesh from vertex coordinates and a set of triangles with given ids;
/// unlike simple \ref mrMeshFromTriangles it tries to resolve non-manifold vertices by creating duplicate vertices
MRMESHC_API MRMesh* mrMeshFromTrianglesDuplicatingNonManifoldVertices( const MRVector3f* vertexCoordinates, size_t vertexCoordinatesNum, const MRThreeVertIds* t, size_t tNum );
/// gets read-only access to the mesh vertex coordinates
MRMESHC_API const MRVector3f* mrMeshPoints( const MRMesh* mesh );
/// gets count of the mesh vertex coordinates
MRMESHC_API size_t mrMeshPointsNum( const MRMesh* mesh );
/// tightly packs all arrays eliminating lone edges and invalid faces and vertices
MRMESHC_API void mrMeshTopologyPack( MRMeshTopology* top );
/// returns cached set of all valid vertices
MRMESHC_API const MRVertBitSet* mrMeshTopologyGetValidVerts( const MRMeshTopology* top );
/// returns cached set of all valid faces
MRMESHC_API const MRFaceBitSet* mrMeshTopologyGetValidFaces( const MRMeshTopology* top );
/// returns three vertex ids for valid triangles (which can be accessed by FaceId),
/// vertex ids for invalid triangles are undefined, and shall not be read
MRMESHC_API MRTriangulation* mrMeshTopologyGetTriangulation( const MRMeshTopology* top );
/// returns one edge with no valid left face for every boundary in the mesh
MRMESHC_API MREdgePath* mrMeshTopologyFindHoleRepresentiveEdges( const MRMeshTopology* top );